change LinkedList to ArrayList; use arrays; go from package to public methods